--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             с февраля 2019 года является Александр Николаевич Юров.
         </h2>
 
-        <p style="margin-right: 150px; font-size: 18px;"> Свою трудовую деятельность начал в 1992 году в 25  
+        <p style="margin-right: 150px; font-size: 18px; margin-left: 150px;"> Свою трудовую деятельность начал в 1992 году в 25  
             Государственном предприятии электрических сетей ВМФ 
             (г. Владивосток) в  должности главного инженера. 
             С 1998 по 2000 год назначен начальником  Государственного 
@@ -121,14 +121,14 @@
             2002 год работал начальником Инспекции энергонадзора ТОФ.
         </p>
 
-        <p style="margin-right: 150px; font-size: 18px;">
+        <p style="margin-right: 150px; font-size: 18px; margin-left: 150px;">
             С 2004 по 2009 год занимал должность директора МУПВ 
             «Владивостокское предприятие электрических сетей». 
             С сентября 2009 по март 2017 года работал в Администрации 
             г. Владивостока заместителем главы по ТЭК.
         </p>
 
-        <p style="margin-right: 150px; font-size: 18px;">
+        <p style="margin-right: 150px; font-size: 18px; margin-left: 150px;">
             С апреля 2017 года по декабрь 2017 года назначен 
             Вице-губернатором по ТЭК в Администрации Приморского
             края. С апреля 2018 года по февраль 2019 года работал 
@@ -138,7 +138,7 @@
             жилищного-коммунального и лесного хозяйств.
         </p>
 
-        <p style="margin-right: 150px; left: 150px; font-size: 18px;" >
+        <p style="margin-right: 150px; left: 150px; font-size: 18px; margin-left: 150px;" >
             С 25 февраля 2019 года по 31 декабря 2019 года занимал 
             должность Операционного директора ПАО «ДЭК», с 01.01.2020 
             по настоящее время занимает должность Исполнительного директора Общества.
